--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <main>
       <div>
-        <h4>BY ZURI Team</h4>
+        <h4> ZURI Team</h4>
         <h2>
           We cater for every level of expertise and needs in the industry.
         </h2>
@@ -107,7 +107,16 @@
         <h1>Join us</h1>
         <p>Learn <span>.</span> Develop <span>.</span> Explore</p>
       </div>
-      <footer>	</footer>
+      <footer>
+        <div class="social-media">
+          <p>Social Media </p>
+          <a href="#"><img src="images/fb.png" alt="facebook"></a>
+          <a href="#"><img src="images/twitter.png" alt="twitter"></a>
+          <a href="#"><img src="images/linkedIn.png" alt="Linkedin"></a>
+        </div>
+        <div id="copyright">&copy; ZuriTeam Panther 2021</div>
+        
+      </footer>
 
       <script src="/app.js"></script>
   </body>
